scripts/nullaway/original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8.txt
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/bean/value/ParamValue.java:8: error: [NullAway] initializer method does not guarantee @NonNull field convertStr (line 15) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public ParamValue(String param){
	       ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/ExpressionHelper.java:130: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/ExpressionHelper.java:132: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:81: error: [NullAway] @NonNull field DirkExpParser$expr_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:132: error: [NullAway] @NonNull field DirkExpParser$logicalOrExpr_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:221: error: [NullAway] @NonNull field DirkExpParser$logicalAndExpr_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:310: error: [NullAway] @NonNull field DirkExpParser$equalityExpr_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:407: error: [NullAway] @NonNull field DirkExpParser$relationalExpr_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:497: error: [NullAway] @NonNull field DirkExpParser$additiveExpr_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:594: error: [NullAway] @NonNull field DirkExpParser$multiplyExpr_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:691: error: [NullAway] @NonNull field DirkExpParser$powExpr_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:773: error: [NullAway] @NonNull field DirkExpParser$unaryExpr_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:872: error: [NullAway] @NonNull field DirkExpParser$memberExpr_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:923: error: [NullAway] @NonNull field DirkExpParser$basicExpr_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:1038: error: [NullAway] @NonNull field DirkExpParser$parenExpr_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:1086: error: [NullAway] assigning @Nullable expression to @NonNull field
            retval.tree = root_0;
                        ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:1126: error: [NullAway] @NonNull field DirkExpParser$literal_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:1212: error: [NullAway] @NonNull field DirkExpParser$numbericLiteral_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:1268: error: [NullAway] @NonNull field DirkExpParser$stringLiteral_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:1352: error: [NullAway] @NonNull field DirkExpParser$memberFunctionExpr_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:1448: error: [NullAway] @NonNull field DirkExpParser$fieldPropertyExpr_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:1497: error: [NullAway] @NonNull field DirkExpParser$methodExpr_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:1606: error: [NullAway] assigning @Nullable expression to @NonNull field
            retval.tree = root_0;
                        ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:1652: error: [NullAway] @NonNull field DirkExpParser$argument_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:1703: error: [NullAway] @NonNull field DirkExpParser$variableExpr_return.tree not initialized
        CommonTree tree;
                   ^
    (see http://t.uber.com/nullaway )
../original/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpParser.java:1749: error: [NullAway] assigning @Nullable expression to @NonNull field
            retval.tree = root_0;
                        ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
26 errors
